# Poker-Solver-Poker-Engine

./: .gitignore  README.md  jest.config.js  package-lock.json  package.json  project_analysis.md  test_output.txt  test_output_2.txt  test_output_3.txt  test_output_4.txt  test_output_5.txt  test_output_6.txt  test_output_debug.txt  test_output_debug_2.txt  test_output_debug_3.txt  test_output_debug_utf8.txt  tsconfig.json
.claude/: settings.local.json
src/app/: globals.css  page.tsx
src/app/poker/: page.tsx
src/app/solver/: page.tsx
src/contexts/: SelectionContext.tsx  SolverContext.tsx
src/core/: analysis.test.ts  analysis.ts  deck.ts  index.ts  prng.ts  ranges.test.ts  ranges.ts  state.ts  validation.test.ts  validation.ts
src/core-rs/: .gitignore  Cargo.toml  check_output.txt  check_output_2.txt  check_output_3.txt
src/core-rs/src/: lib.rs
src/core-rs/src/poker/: card.rs  equity.rs  evaluator.rs  mod.rs
src/core-rs/src/solver/: arena.rs  builder.rs  dcfr.rs  mod.rs  types.rs
src/core/audit/: index.ts
src/core/engine/: autoRunout.test.ts  engine.test.ts  index.ts  scenarios.test.ts  showdown_next_hand.test.ts
src/core/evaluator/: evaluator.test.ts  index.ts
src/core/replay/: index.ts
src/core/rules/: index.ts
src/core/showdown/: index.ts  showdown.test.ts
src/core/solver/: BestResponse.ts  DiscountedCFR.test.ts  DiscountedCFR.ts  InfosetStore.ts  cfr.test.ts  cfr.ts  treeBuilder.ts  (+3 more)
src/scripts/: simulate.ts
src/utils/: cardParser.ts  deck.ts  positions.ts  range.ts  solverMapping.ts  standardRanges.ts
src/workers/: solver.worker.ts
(+24 files in other folders)
