[package]
name = "poker-solver-core"
version = "0.1.0"
edition = "2024"
authors = ["Poker Solver Team"]
description = "High-performance Poker Solver core engine in Rust/WebAssembly"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["console"] }
lazy_static = "1.4"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
rand = "0.8"

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = []

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-mutable-globals"]
